fixed sizing so it doesnt go off screen on small screens and reorganize about page when on small screen

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,13 @@
       display: block;
       cursor: pointer;
     }
+
+    .about-content {
+      display: flex;
+      flex-direction: column; /* Stack items vertically */
+      justify-content: flex-start; 
+      align-items: center; 
+  }
   
     #mobile-menu.is-active .bar:nth-child(2) {
       opacity: 0;
@@ -166,7 +173,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start; 
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
@@ -174,7 +180,7 @@
   }
 
   .hero__heading {
-    font-size: 100px;
+    font-size: 10vmin;
     margin-bottom: 24px;
     color: pink;
   }
@@ -185,10 +191,14 @@
     align-items: center; 
   }
 
-  #myself-image {
-    width: 300px;
-    height: auto; 
-  }
+ #myself-image{
+  width: 50%;
+  height: auto;
+ }
+
+ #myself-text{
+  width: 100%;
+ }
 
 .text-container {
   align-items: flex-start; /* Align text at the top */
@@ -201,6 +211,7 @@
 }
 
 .logos {
+  width: 100%;
   margin: 10px; /* Adjust the margin for spacing between logos */
 }
 
@@ -220,7 +231,7 @@
 }
 
 .NotesImages {
-  width: 500px; /* Adjust the width as needed */
+  width: 50%; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
   margin: 10px; /* Adjust the margin for spacing between images */
 }
